# opt_path_search

./: CMakeLists.txt  LICENSE  README.md
data/problem_dummy/: optimal_actions.json  states.json
data/problem_robot/: actions.json  optimal_actions.json  problem.json  states.json
data/problem_trial1/: actions.json  problem.json  states.json
data/problem_trial2/: actions.json  problem.json  states.json
include/: plan_shortest_time.h
src/: plan_shortest_time.cpp  plan_shortest_time_exe.cpp
